[gd_scene load_steps=2 format=3 uid="uid://rtgyom8nt1ly"]

[ext_resource type="Script" uid="uid://ooi5eifk8gae" path="res://quit/menu.gd" id="1_c6hlb"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6hlb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.482353, 0.65098, 0.533333, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "thot coneccion 
    p2p godot  obsoleto "

[node name="websocket" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "websocket"

[node name="tcp" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "tcp simple"

[node name="enet" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "enet"

[node name="udp" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "udp simple"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 1.0
offset_right = 433.0
offset_bottom = 24.0
text = "no se si funciona todo como debe "

[connection signal="pressed" from="VBoxContainer/websocket" to="." method="_on_websocket_pressed"]
[connection signal="pressed" from="VBoxContainer/tcp" to="." method="_on_tcp_pressed"]
[connection signal="pressed" from="VBoxContainer/enet" to="." method="_on_enet_pressed"]
[connection signal="pressed" from="VBoxContainer/udp" to="." method="_on_udp_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
